[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fharvest"
version = "0.1.0"
authors = [
  { name="Viktor Pryima", email="pryima.viktor@gmail.com" },
]
description = "A tool for harvesting files from project directories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kyony/fharvest"
"Bug Tracker" = "https://github.com/kyony/fharvest/issues"