[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fharvest"
version = "0.1.0"
authors = [
  { name="Viktor Pryima", email="pryima.viktor@gmail.com" },
]
description = "A tool for harvesting files from project directories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = [
    "tests/*",
    "setup.py",
]

[project.urls]
"Homepage" = "https://github.com/kyony/fharvest"
"Bug Tracker" = "https://github.com/kyony/fharvest/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fharvest"]